# libfgc-rewriter

./: CMakeLists.txt  README.md  sample_fgc_file.txt
rewriter/: rewriter.cmake
rewriter/avc/: error_codes.h  fgcr.h  fgcr_api.c  fgcr_bitstrm.c  fgcr_bitstrm.h  fgcr_debug.h  fgcr_defs.h  fgcr_error_handler.h  fgcr_macros.h  fgcr_nal.c  fgcr_nal.h  fgcr_parse_cavlc.c  fgcr_parse_cavlc.h  fgcr_parse_headers.c  fgcr_parse_headers.h  fgcr_parse_slice.c  fgcr_parse_slice.h  fgcr_platform_macros.h  fgcr_sei.c  fgcr_sei.h  fgcr_structs.h  fgcr_typedefs.h  fgcr_utils.h
test/: main.c  test.cmake
